newtype-tools/tests/trybuild/from.stderr
error: unexpected end of input, expected one of: `for`, parentheses, `fn`, `unsafe`, `extern`, identifier, `::`, `<`, `dyn`, square brackets, `*`, `&`, `!`, `impl`, `_`, lifetime
 --> tests/trybuild/from.rs:5:20
  |
5 |     #[newtype(from())]
  |                    ^

error: expected `,`
  --> tests/trybuild/from.rs:11:23
   |
11 |     #[newtype(from(u64))]
   |                       ^

error: unexpected end of input, expected `with`
  --> tests/trybuild/from.rs:17:24
   |
17 |     #[newtype(from(u64,))]
   |                        ^

error: expected `=`
  --> tests/trybuild/from.rs:23:29
   |
23 |     #[newtype(from(u64, with))]
   |                             ^

error: unexpected end of input, expected an expression
  --> tests/trybuild/from.rs:29:31
   |
29 |     #[newtype(from(u64, with =))]
   |                               ^
